<resources>
    <string name="app_name">Metronom</string>

    <string name="manual_mode">MANUAL MODE</string>
    <string name="set_bpm">SET BPM YOU NEED BELOW</string>
    <string name="indicator">INDICATOR</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="bpm">bpm</string>
    <string name="vibro">vibration</string>
    <string name="flash">flash</string>
    <string name="sound">sound</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
