<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.figli.metronom.MainActivity">

    <TextView
        android:id="@+id/manual_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="489dp"
        android:text="@string/manual_mode"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="339dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="391dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/vibro_button"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/vibro_w" />

        <TextView
            android:id="@+id/vibro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="18dp"
            android:text="@string/vibro"
            android:textColor="@color/colorText" />

        <ImageView
            android:id="@+id/flash_button"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginLeft="154dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/flash_v" />

        <TextView
            android:id="@+id/flash_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="150dp"
            android:text="@string/flash"
            android:textColor="@color/colorText" />

        <ImageView
            android:id="@+id/sound_button"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginLeft="264dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/sound" />

        <TextView
            android:id="@+id/sound_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="260dp"
            android:text="@string/sound"
            android:textColor="@color/colorText" />

    </RelativeLayout>

    <TextView
        android:id="@+id/set_bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="335dp"
        android:text="@string/set_bpm"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="289dp"
        android:layout_marginLeft="190dp"
        android:text="@string/bpm"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_bpm"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="282dp"
        android:layout_marginLeft="130dp"
        android:inputType="number" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="218dp"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/arrows"
        android:progress="0"
        android:max="100"
        android:indeterminate="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plus"
        android:text="@string/plus"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="224dp"
        android:layout_toRightOf="@+id/seekbar"
        android:textSize="26sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minus"
        android:text="@string/minus"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="224dp"
        android:layout_toLeftOf="@+id/seekbar"
        android:textSize="26sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:text="@string/indicator" />

    <ImageView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:background="@android:color/transparent"
        android:src="@drawable/indicator" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/start"
        android:textColor="@color/colorText" />
</RelativeLayout>
